--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,74 @@
-encabezado {
-    background-color: #85B3FF;
+header {
+    height: 190px;
+    margin-top: 15px;
+    background: #1C6EA4;
+background: -moz-linear-gradient(left, #1C6EA4 0%, #2388CB 55%, #144E75 100%);
+background: -webkit-linear-gradient(left, #1C6EA4 0%, #2388CB 55%, #144E75 100%);
+background: linear-gradient(to right, #1C6EA4 0%, #2388CB 55%, #144E75 100%);
+
 }
+.fotito {
+    border-radius: 100%;
+    height: 150px;
+    width: 150px;
+    margin-top: 1%;
+    margin-left: 5%;
+    border: 2px solid white;
+    float: left;
+}
+
+.nombre-fotito {
+    color: white;
+    text-align:center;
+    font-size: 270%;
+    margin-top: 15px;
+    padding-top: 3%;
+    
+    
+}
+.profesion-fotito {
+    color: white;
+    text-align:center;
+    font-size: 125%;
+    margin-top: -20px;
+    font-style: italic;
+}
+nav {
+    height: 80px;
+    margin-top: -20px;
+    background: #1C6EA4;
+    background: -moz-linear-gradient(left, #1C6EA4 0%, #2388CB 55%, #144E75 100%);
+    background: -webkit-linear-gradient(left, #1C6EA4 0%, #2388CB 55%, #144E75 100%);
+    background: linear-gradient(to right, #1C6EA4 0%, #2388CB 55%, #144E75 100%);
+}
+ul {
+    list-style: none;
+    text-align:center;
+    margin-left: 5%;
+    font-weight: bold;
+}
+li {
+    display: inline;
+    color:white;
+    padding-left: 3px;
+    padding-right: 3px;
+    font-size: 145%;
+ 
+}
+a {
+    text-decoration:none;
+    color:white;
+}
+aside {
+    float: left;
+    width: 20%;
+}
+article {
+    width: 70%;
+    float: left;
+    font-size:120%;
+}
+.perfil{
+    font-style: italic;
+}
+
