--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,11 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 header {
     height: 190px;
     margin-top: 15px;
@@ -5,7 +13,6 @@ header {
 background: -moz-linear-gradient(left, #1C6EA4 0%, #2388CB 55%, #144E75 100%);
 background: -webkit-linear-gradient(left, #1C6EA4 0%, #2388CB 55%, #144E75 100%);
 background: linear-gradient(to right, #1C6EA4 0%, #2388CB 55%, #144E75 100%);
-
 }
 .fotito {
     border-radius: 100%;
@@ -64,7 +71,7 @@ aside {
     width: 20%;
 }
 article {
-    width: 70%;
+    width: 80%;
     float: left;
     font-size:120%;
 }
@@ -72,3 +79,44 @@ article {
     font-style: italic;
 }
 
+.pie {
+    text-align: center;
+    color: black;
+   font-weight: bold;
+}
+.barra {
+    height: 25px;
+    width: 90%;
+    border: 2px solid #428bcb;
+    border-radius: 10px;
+    background-color: white;
+    margin-bottom: 15px;
+}
+ 
+.barra-pro {
+    height: 100%;
+    background: #428bcb;
+    display: flex;
+    align-items: center;
+    transition: width 0.25s;
+    border-radius: 5px;
+}
+ 
+.barra-pro-tex {
+    margin-left: 10px;
+    font-weight: bold;
+    color: white;
+}
+
+.button {
+    margin-left: 8%;
+    margin-top: 15%;
+    background-color: #428bcb; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
