--- a/css/estilo.css
+++ b/css/estilo.css
@@ -10,9 +10,9 @@ header {
     height: 190px;
     margin-top: 15px;
     background: #1C6EA4;
-background: -moz-linear-gradient(left, #1C6EA4 0%, #2388CB 55%, #144E75 100%);
-background: -webkit-linear-gradient(left, #1C6EA4 0%, #2388CB 55%, #144E75 100%);
-background: linear-gradient(to right, #1C6EA4 0%, #2388CB 55%, #144E75 100%);
+    background: -moz-linear-gradient(left, #1C6EA4 0%, #2388CB 55%, #144E75 100%);
+    background: -webkit-linear-gradient(left, #1C6EA4 0%, #2388CB 55%, #144E75 100%);
+    background: linear-gradient(to right, #1C6EA4 0%, #2388CB 55%, #144E75 100%);
 }
 .fotito {
     border-radius: 100%;
@@ -109,10 +109,10 @@ article {
 }
 
 .button {
-    margin-left: 8%;
-    margin-top: 15%;
+    margin-left: 40%;
     background-color: #428bcb; 
     border: none;
+    border-radius: 5px;
     color: white;
     padding: 15px 32px;
     text-align: center;
